<resources>
    <string name="app_name">Diabetes</string>
    <string name="nova_medicao">Nova Medição</string>
    <string name="medicoes">Listar Medições</string>
    <string name="relatorio">Gerar Relatório</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="valor">Valor Medido (mg/dl)</string>
    <string name="observacoes">Observações</string>
    <string name="selecione">Selecione</string>
    <string name="nph">Insulina NPH (un)</string>
    <string name="acaoRapida">Insulina Ação Rápida (un)</string>
    <string name="salvar">Salvar</string>
    <string name="detalhes">Detalhes</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
s</resources>
