<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff0000"
    android:orientation="vertical">

<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
        
        
        <TextView
            android:id="@+id/nova_medicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/nova_medicao"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="50dp"
            android:onClick="selecionarOpcao"
            android:text="@string/nova_medicao"
            android:textColor="#000000"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nova_medicao"
            android:layout_alignTop="@+id/nova_medicao"
            android:id="@+id/medicoes"
            android:layout_marginTop="150dp"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:text="@string/medicoes"
            android:drawableTop="@drawable/list"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opcoes"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:text="@string/relatorio"
            android:drawableTop="@drawable/report"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_alignLeft="@id/nova_medicao"
            android:layout_alignTop="@+id/medicoes"
            android:layout_marginTop="150dp"/>



        </RelativeLayout>
    </LinearLayout>
